Edited config.json for negative answers

--- a/mrc/model_config.json
+++ b/mrc/model_config.json
@@ -9,9 +9,9 @@
     "do_eval": true,
     "learning_rate": 5e-5,
     "evaluate_during_training":false,
-    "do_lower_case": false,
+    "do_lower_case": true,
     "per_gpu_train_batch_size": 8,
-    "per_gpu_eval_batch_size": 16,
+    "per_gpu_eval_batch_size": 1,
     "gradient_accumulation_steps": 1,
     "weight_decay": 0.0,
     "adam_epsilon": 1e-8,
@@ -35,9 +35,9 @@
     "data_dir": "",
     "train_file": "",
     "predict_data": "",
-    "version_2_with_negative": false,
+    "version_2_with_negative": true,
     "null_score_diff_threshold": 0.0,
-    "max_seq_length": 384,
+    "max_seq_length": 512,
     "doc_stride": 128,
     "max_query_length": 64,
     "n_best_size": 20,
